commit another part

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header class="quicksand-font nav-header-section box-shadow ">
+    <header class="quicksand-font nav-header-section  ">
        
         <!-- nav bar part starts from here -->
-        <nav class="navbar display-flex box-shadow">
+        <nav class="navbar display-flex">
             
             <img class="nav-logo" src="assets/logo.png" alt="">
              <h3 class="school font1 black">SCHOOL</h3>
