fixing the site

--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
                  This is a Kids Educational site!
               </div>
           </marquee>
-     
+     </main>
      <!-- footer sections starts from here -->
-     <footer class="quicksand-font">
-      <div class="footer-section bg-color display-flex">
+     <footer class="quicksand-font bg-color">
+      <div class="footer-section  display-flex">
 
 
         <div class="footer-heading-section ">
