--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
           </marquee>
      </main>
      <!-- footer sections starts from here -->
-     <footer class="quicksand-font bg-color">
-      <div class="footer-section  display-flex">
+     <footer class=" footer-section quicksand-font bg-color">
+      <div class="footer-section display-flex">
 
 
         <div class="footer-heading-section ">
