--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           </marquee>
      </main>
      <!-- footer sections starts from here -->
-     <footer class=" footer-section quicksand-font bg-color">
+     <footer class="  quicksand-font bg-color">
       <div class="footer-section display-flex">
 
 
