--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         </div>
     </header>
     <!-- Main section start from here -->
-     <main class="bg-image ">
+     <div class="container">
+     <main class="bg-image">
         <section class="Curriculum-section ">
            <h1 class="Curriculum-title font7 another-black quicksand-font">Standard Curriculum</h1>
              
@@ -183,6 +184,7 @@
               </div>
           </marquee>
      </main>
+    </div>
      <!-- footer sections starts from here -->
      <footer class="  quicksand-font bg-color">
       <div class="footer-section display-flex">
