--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
      </main>
     </div>
      <!-- footer sections starts from here -->
-     <footer class="  quicksand-font bg-color">
-      <div class="footer-section display-flex">
+     <footer class="  quicksand-font ">
+      <div class="footer-section bg-color display-flex">
 
 
         <div class="footer-heading-section ">
