--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
     </header>
     <!-- Main section start from here -->
-     <div class="container">
-     <main class="bg-image">
+     <div class="">
+     <main class="bg-image width: 100%;">
         <section class="Curriculum-section ">
            <h1 class="Curriculum-title font7 another-black quicksand-font">Standard Curriculum</h1>
              
@@ -189,8 +189,8 @@
  
 
      
-     <footer class=" bg-color  quicksand-font ">
-      <div class="footer-section  display-flex">
+     <footer class=" quicksand-font ">
+      <div class="footer-section  bg-color   display-flex">
 
 
         <div class="footer-heading-section ">
