Commit the whole assignment

--- a/index.html
+++ b/index.html
@@ -90,7 +90,13 @@
                <button class="arrow box-shadow">&lt;</button>
                <button class="arrow box-shadow">&gt;</button>
               </div>
-               
+                      
+          <marquee class="marq"  
+          direction="top" loop="continue">
+     <div class="marque">
+        This is a Kids Educational site!
+     </div>
+ </marquee>
         </section>
 
         <!-- Our stories section starts from here -->
